syntax = "proto3";

package flowpipe.stages.orc.arrow.source.v1;

import "arrow/arrow_common.proto";

// Configuration for OrcArrowSource stage
message OrcArrowSourceConfig {
  // File path to read
  string path = 1;

  // Output payload type
  arrow.common.OutputType output_type = 2;

  // Filesystem selection
  arrow.common.FileSystem filesystem = 3;
}
